--- a/frontend/src/app/pages/home.component.html
+++ b/frontend/src/app/pages/home.component.html
@@ -12,6 +12,6 @@
         <login></login>
     </div>
   <div>
-    <a (click)="test()">Test</a>
+    <a (click)="test()">TEST</a>
   </div>
 </div>
